# WhispEngine

./: .gitignore  CMakeLists.txt  README.md  Update.md  WhispEngine.cpp  WhispEngine.h
WhispEngine/: .gitignore  CMakeLists.txt  WhispEngine.cpp
WhispEngine/engine/: CMakeLists.txt
WhispEngine/engine/core/: Application.cpp  Application.h  ConfigLoader.cpp  ConfigLoader.h  Logger.h  Time.cpp  Time.h
WhispEngine/engine/game/: IGameState.h  StateMachine.cpp  StateMachine.h
WhispEngine/engine/game/states/: GameplayState.cpp  LoadingState.h  MenuState.cpp
WhispEngine/engine/platform/: GlfwSystem.cpp  GlfwWindow.cpp  GlfwWindow.h  IWindow.h
WhispEngine/engine/render/: IRenderAdapter.h  NullRenderAdapter.h  RenderFactory.cpp  RenderFactory.h
WhispEngine/engine/render/backends/dx12/: Dx12RenderAdapter.cpp  Dx12RenderAdapter.h
WhispEngine/engine/render/backends/vulkan/: VkRenderAdapter.cpp  VkRenderAdapter.h
WhispEngine/engine/shaders/: Shaders.cmake
WhispEngine/engine/shaders/dx12/: triangle.hlsl
WhispEngine/engine/shaders/vulkan/: triangle.frag  triangle.vert
engine/: CMakeLists.txt
engine/assets/: README.md
engine/assets/materials/: african_head.material.json  blue.material.json  caveman.json  validation_checker.material.json  white.material.json
engine/assets/models/: README.md  caveman.gltf  validation_triangle.obj.wmesh
engine/assets/scenes/: pz3_demo_scene.json
engine/assets/textures/: README.md  catik.dds  validation_checker.png.wtex
engine/config/: app.json
engine/core/: Application.cpp  Application.h  AssetDependencyValidation.cpp  AssetDependencyValidation.h  AssetPaths.cpp  AssetPaths.h  ConfigLoader.cpp  ConfigLoader.h  Logger.cpp  Time.cpp  Time.h
engine/ecs/: Component.h  Entity.h  MathTypes.h  World.cpp  World.h
engine/ecs/components/: BoundsBounceComponent.h  ColliderComponent.h  LightComponent.h  MaterialComponent.h  MeshRendererComponent.h  RigidbodyComponent.h  TagComponent.h  TransformComponent.h  TriangleRenderComponent.h  VelocityComponent.h
engine/ecs/events/: EventBus.h
engine/ecs/systems/: BoundsBounceSystem.cpp  BoundsBounceSystem.h  ISystem.h  MotionSystem.cpp  MotionSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  RenderSystem.cpp  RenderSystem.h  SystemPipeline.cpp  SystemPipeline.h
engine/editor/: EditorLayer.cpp  EditorLayer.h
engine/game/: StateMachine.cpp  StateMachine.h
engine/game/states/: GameplayState.cpp  GameplayState.h  LoadingState.cpp  MenuState.cpp  MenuState.h
engine/platform/: GlfwSystem.h  GlfwWindow.cpp  GlfwWindow.h  IWindow.h  InputManager.cpp  InputManager.h
engine/render/: IRenderAdapter.h  RenderFactory.cpp  RenderResourceHandles.h
engine/render/backends/dx12/: Dx12RenderAdapter.cpp  Dx12RenderAdapter.h
engine/render/backends/vulkan/: VkRenderAdapter.cpp  VkRenderAdapter.h
engine/resources/: MaterialResource.h  MeshData.h  MeshResource.h  Resource.h  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ShaderResource.h  TextureData.h  TextureResource.h
engine/resources/loaders/: MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  ShaderLoader.cpp  ShaderLoader.h  TextureLoader.cpp  TextureLoader.h
engine/scene/: SceneSerializer.cpp  SceneSerializer.h
engine/shaders/: Shaders.cmake
engine/shaders/dx12/: lit.hlsl  textured.hlsl  triangle.hlsl
engine/shaders/vulkan/: triangle.frag  triangle.vert
